@@ -259,8 +259,8 @@
   (values socket))
 
 (defmethod bind-address ((socket local-socket) (address local-address) &key)
-  (with-sockaddr-un (sun (address-name address))
-    (%bind (fd-of socket) sun size-of-sockaddr-un))
+  (with-sockaddr-un (sun (address-name address) (abstract-address-p address))
+    (%bind (fd-of socket) sun (actual-size-of-sockaddr-un sun)))
   (values socket))
 
 (defmethod bind-address :after ((socket socket) (address address) &key)
@@ -352,8 +352,8 @@
   (values socket))
 
 (defmethod connect ((socket local-socket) (address local-address) &key)
-  (with-sockaddr-un (sun (address-name address))
-    (%connect (fd-of socket) sun size-of-sockaddr-un))
+  (with-sockaddr-un (sun (address-name address) (abstract-address-p address))
+    (%connect (fd-of socket) sun (actual-size-of-sockaddr-un sun)))
   (values socket))
 
 (defmethod connect ((socket passive-socket) address &key)
