@@ -6,6 +6,8 @@
 - IOLIB.SOCKETS:IPV6-SOCKET-P was renamed to SOCKET-IPV6-P
 - When creating an AF_LOCAL socket, IOLIB.SOCKETS:MAKE-SOCKET accepts :FILE as
   :TYPE synonim of :LOCAL
+** New features
+- Add support for abstract UNIX addresses
 ** Bug fixes:
 - EVENT-DISPATCH now calculates the distance to the next timer correctly
   (reported by Ariel Badichi)
